--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <meta name="description" content="Centre for Marine Living Resources and Ecology (CMLRE) - Advanced marine data management, visualization, and analysis platform for sustainable ocean research." />
     <meta name="author" content="CMLRE" />
     <meta name="keywords" content="marine research, ocean data, marine biology, fish species, environmental data, marine ecology, biodiversity, oceanography" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon-16x16.svg" />
+    <link rel="shortcut icon" href="/favicon.svg" />
 
+    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="CMLRE - Marine Data Platform" />
     <meta property="og:description" content="Advanced marine data management and analysis platform for sustainable ocean research" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://your-domain.com" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="CMLRE - Marine Data Platform" />
     <meta name="twitter:description" content="Sustainable Oceans through Integrated Data" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
